# cmake-wxWidgets

./: CMakeLists.txt
.github/workflows/: ubuntu.yml
scripts/: UbuntuSetup.sh
src/: main.cpp  mainWindow.cpp  mainWindow.h
